--- a/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -224,7 +224,7 @@ The anticipation would follow the detection of a high [learntropy](https://super
 
 ## 6.9 The wow factor
 
-## 「哇！」因子
+## 「哇」因子
 
 In the summer of 1977, while looking for extraterrestrial intelligence, SETI researchers discovered an unusual radio signal coming from [Sagittarius](https://en.wikipedia.org/wiki/Sagittarius_(constellation)). In the bland low-level noise of cosmic space the signal was highly unlikely. Low probability marks high surprisal. Astronomer Jerry Ehman circled 6 letters corresponding with the signal on a printout and mark it with "Wow!".
 
@@ -234,19 +234,19 @@ In the summer of 1977, while looking for extraterrestrial intelligence, SETI res
 
 > **Figure:** *A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal. (source: Wikipedia)*
 >
-> **图**:*一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇!信号](https://en.wikipedia.org/wiki/Wow!_signal)。（来源：维基百科）*
+> **图**:*一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇！信号](https://en.wikipedia.org/wiki/Wow!_signal)。（来源：维基百科）*
 
 "Wow!" is how the brain responds to a sudden discovery. The moment is highly pleasurable. The entire purpose of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is to look for wow factors in the environment. These are the most valuable nuggets of knowledge that complement what is currently known: the current model of reality. The pleasure of [incremental reading](https://supermemo.guru/wiki/Incremental_reading) comes from the condensed power of wows streamed into the student's brain.
 
-「Wow!」 是大脑对突然发现的反应。这一刻非常愉快。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的全部目的是在环境中寻找「Wow!」因子。这些是最有价值的知识，补充了目前已知的：当前的现实模型。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的乐趣来自流入学生大脑的涌动的「wows」的力量。
+「Wow!」 是大脑对突然发现的反应。这一刻非常愉快。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的全部目的是在环境中寻找「哇」因子。这些是最有价值的知识，补充了目前已知的：当前的现实模型。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的乐趣来自流入学生大脑的涌动的「哇」的力量。
 
 Thus far, we have seen the impact of entropy, surprisal, predictability, and current knowledge on learning. In this case, the mere probability of the signal does not fully explain its power. It is the interpretation that stands behind it (see: [Knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network)). At the moment of making his note, Ehman could sense the enormity of its implications. This had been the most powerful evidence thus far and ever since for the existence of intelligence other than human intelligence. If the same signal represented detecting sardines in the ocean, there would be no "wow!". Not even in the Arctic.
 
-到目前为止，我们已经看到熵、意外、可预测性和预备知识对学习的影响。在这种情况下，只有信号的概率并不能完全解释它的力量。它的解释在本文的后面（参见：[知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)）。Ehman 在写这篇文章的时候，能够感觉到它所蕴含的巨大意义。这是迄今为止，也是从那时起，证明除了人类文明以外，还有其他文明存在的最有力的证据。如果相同的信号出现在检测海洋中的沙丁鱼，就不会有「Wow!」。即使在北极也不会有。
+到目前为止，我们已经看到熵、意外、可预测性和预备知识对学习的影响。在这种情况下，只有信号的概率并不能完全解释它的力量。它的解释在本文的后面（参见：[知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)）。Ehman 在写这篇文章的时候，能够感觉到它所蕴含的巨大意义。这是迄今为止，也是从那时起，证明除了人类文明以外，还有其他文明存在的最有力的证据。如果相同的信号出现在检测海洋中的沙丁鱼，就不会有「哇！」。即使在北极也不会有。
 
 The reliability of the information channel is important. If the error rate is high, the [learn drive](https://supermemo.guru/wiki/Learn_drive) may weaken. When Penzias and Wilson discovered cosmic microwave background radiation in 1964, there was no "wow!". Perplexed researchers went on to remove pigeon droppings from their radio antenna. Pigeon droppings received a priority in their explanation of the mysterious noise. In 1978, for their discovery, Penzias and Wilson received a Nobel Prize.
 
-信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当 Penzias 和 Wilson 在 1964 年发现宇宙微波背景辐射时，并没有「Wow!」。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978 年，Penzias 和 Wilson 因为他们的发现获得了诺贝尔奖。
+信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当 Penzias 和 Wilson 在 1964 年发现宇宙微波背景辐射时，并没有「哇！」。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978 年，Penzias 和 Wilson 因为他们的发现获得了诺贝尔奖。
 
 When a scientist makes a discovery, he may exclaim "*Eureka!*" and punch the air. A neural network somewhere in his brain has produced a [generalization](https://supermemo.guru/wiki/Generalization)that results in sending a reward signal. This propagates further and makes an old man jump around the lab like a child.
 
@@ -280,13 +280,17 @@ Unusual and surprising bits of knowledge are highly valued, however, the probabi
 
 不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最佳反映。有极不可能发生的低重要性事件（例如，小行星撞击遥远的行星系统），也有很可能的发生改变一个人生活的事件（例如，「*你愿意嫁给我吗*？」）。
 
-### 6.10.2 The emotional brain and the rational brain感性脑和理性脑
+### 6.10.2 The emotional brain and the rational brain
+
+### 感性脑和理性脑
 
 **Knowledge valuation network** is an evaluation system based on a resultant of emotional and rational valuations. Emotional valuations will connect information with rewards in primitive brain centers responsible for hunger, thirst, sex drive, etc. Rational valuations will be knowledge-based. An example of pure emotional valuation comes from an answer to "*Where is the nearest fast food shop?*". Knowledge-based valuations may be more complex and highly networked, i.e. dependent on a network of subvaluations. Answer to "*Which book is best for my exam?*" is evaluated through one's goals that include passing exam leading to getting a degree affecting job prospects and contributing to lifetime goals. Emotional and rational valuations segregate anatomically. The emotional valuations come from what has metaphorically been described as older portions of the triune brain: reptilian and paleommamalian structures. For example, a specific stimulus processed by the thalamus may send separate signals to the amygdala for an emotional valuation and to the neocortex for a rational valuation. The emotional brain is philogenetically older. Personality and education determine if rational valuations can control or override emotional valuations.
 
 **知识评估网络**是一个基于感性评估和理性评估相结合的评估系统。感性评估将把信息与原始大脑中枢负责饥饿、口渴、性冲动等的奖励联系起来。理性估值将以知识为基础。纯粹感性评估的一个例子是对「*最近的快餐店在哪里？*」的回答。基于知识的评估可能更加复杂和高度网络化，也就是说，依赖于一个次级评估网络。对「*哪本书最适合我的考试？*」的回答通过一个人的目标来评估，包括通过考试，获得影响工作前景的学位，并为终生目标做出贡献。感性和理性的评估在解剖学上是分开的。感性评估来自于被比喻为三位一体大脑中更古老的部分：爬行动物和古哺乳动物结构。例如，丘脑处理的特定刺激可能会向杏仁体发送单独的信号进行感性评估，向新皮层发送单独的信号进行理性评估。感性化的大脑在基因上更古老。个性和教育决定了理性评估是否能控制或超越感性评估。
 
-### 6.10.3 Decision tree in fast thinking快速思考中的决策树
+### 6.10.3 Decision tree in fast thinking
+
+### 快速思考中的决策树
 
 **Knowledge valuation network** is the network of memory connections that determine the value of an individual piece of knowledge. If learning is interpreted as a task, valuation network will determine the **perceived task value**.
 
