--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -1,70 +1,137 @@
-- 1Introduction前言
-  - [1.1Failure of schooling学校教育的失败](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
-  - [1.2Scrapping the school system废除学校制度](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
-  - [1.3Brain-based reform基于大脑的改革](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
-  - [1.4Love for children对孩子的爱](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
-  - [1.5Executive Summary执行概要](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
-  - [1.6Kids are not adults in minature孩子不是微型的成年人](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
-  - [1.7Fundamental law of learning学习基本定律](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)
-  - [1.8Message to our future selves给我们未来的自己的信息](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Message_to_our_future_selves)
-  - [1.9Dangers of early instruction早期教育的危险](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Dangers_of_early_instruction)
-  - [1.10Futility of cramming徒劳的填鸭式](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Futility_of_cramming)
-  - [1.11Learning skill impotence学习能力的丧失](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
-  - [1.12Grand Education Reform宏大的教育改革](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
-  - [1.13When school is a blessing何时学校的一种眷顾](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
-  - [1.14The Optimization Error优化错误](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
-  - [1.15Fostering diversity培养多样性](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
-  - [1.16Death of knowledge知识的消亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
-  - [1.17Prediction: Death of schooling预言：学校的死亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
-- [2Motto箴言](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
-- [3Brain science脑科学](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
-- 4Learn drive学习内驱力
-  - [4.1Definition定义](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Definition)
-  - [4.2Terminology术语](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Terminology)
-  - [4.3Novelty and stress新奇和压力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
-  - [4.4Suppression of the learn drive学习驱力的抑制因素](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
-  - [4.5Further reading延伸阅读](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
-  - [4.6Summary: Learn drive总结：学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
-- 5Effect of schooling on the learn drive学校教育对学习内驱力的影响
-  - [5.1Learn drive vs. age学习内驱力与年龄](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
-  - [5.2Learn drive vs. knowledge学习内驱力与知识](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
-  - [5.3Learn drive vs. learning学习内驱力与学习](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
-  - [5.4Teacher problem老师的困境](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
-  - [5.5Learn drive distortions学习内驱力扭曲](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
-  - [5.6School enthusiasm上学热情](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
-  - 5.7Powering learn drive with SuperMemo用 SuperMemo 加强学习内驱力
-    - [5.7.1Enhancing the learn drive增强学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Enhancing_the_learn_drive)
-    - [5.7.2Stunting the learn drive阻碍学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stunting_the_learn_drive)
-    - [5.7.3Learn drive at middle age中年时期的学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_at_middle_age)
-  - [5.8Perpetual learn drive永恒的学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perpetual_learn_drive)
-  - [5.9Summary: Changes to the learn drive总结: 改变学习内驱力的因素](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
+- 1Introduction
+- 前言
+  - [1.1Failure of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
+  - 学校教育的失败
+  - [1.2Scrapping the school system](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
+  - 废除学校制度
+  - [1.3Brain-based reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
+  - 基于大脑的改革
+  - [1.4Love for children](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
+  - 对孩子的爱
+  - [1.5Executive Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
+  - 执行概要
+  - [1.6Kids are not adults in minature](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
+  - 孩子不是微型的成年人
+  - [1.7Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)
+  - 学习基本定律
+  - [1.8Message to our future selves](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Message_to_our_future_selves)
+  - 给我们未来的自己的信息
+  - [1.9Dangers of early instruction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Dangers_of_early_instruction)
+  - 早期教育的危险
+  - [1.10Futility of cramming](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Futility_of_cramming)
+  - 徒劳的填鸭式
+  - [1.11Learning skill impotence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
+  - 学习能力的丧失
+  - [1.12Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
+  - 宏大的教育改革
+  - [1.13When school is a blessing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
+  - 何时学校的一种眷顾
+  - [1.14The Optimization Error](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
+  - 优化错误
+  - [1.15Fostering diversity](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
+  - 培养多样性
+  - [1.16Death of knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
+  - 知识的消亡
+  - [1.17Prediction: Death of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
+  - 预言：学校的死亡
+- [2Motto](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
+- 箴言
+- [3Brain science](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
+- 脑科学
+- 4Learn drive
+- 学习内驱力
+  - [4.1Definition](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Definition)
+  - 定义
+  - [4.2Terminology](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Terminology)
+  - 术语
+  - [4.3Novelty and stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
+  - 新奇和压力
+  - [4.4Suppression of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
+  - 学习驱力的抑制因素
+  - [4.5Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
+  - 拓展阅读
+  - [4.6Summary: Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
+  - 摘要：学习内驱力
+- 5Effect of schooling on the learn drive
+- 学校教育对学习内驱力的影响
+  - [5.1Learn drive vs. age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
+  - 学习内驱力与年龄
+  - [5.2Learn drive vs. knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
+  - 学习内驱力与知识
+  - [5.3Learn drive vs. learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
+  - 学习内驱力与学习
+  - [5.4Teacher problem](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
+  - 老师的困境
+  - [5.5Learn drive distortions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
+  - 学习内驱力扭曲
+  - [5.6School enthusiasm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
+  - 上学热情
+  - 5.7Powering learn drive with SuperMemo
+  - 用 SuperMemo 加强学习内驱力
+    - [5.7.1Enhancing the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Enhancing_the_learn_drive)
+    - 增强学习内驱力
+    - [5.7.2Stunting the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stunting_the_learn_drive)
+    - 阻碍学习内驱力
+    - [5.7.3Learn drive at middle age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_at_middle_age)
+    - 中年时期的学习内驱力
+  - [5.8Perpetual learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perpetual_learn_drive)
+  - 永恒的学习内驱力
+  - [5.9Summary: Changes to the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
+  - 摘要：改变学习内驱力的因素
 - 6Learn drive and reward
+- 学习内驱力和奖励
   - [6.1The main problem in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_main_problem_in_education)
+  - 教育中的主要问题
   - [6.2Learn drive and entropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_entropy)
+  - 学习内驱力和熵
   - [6.3Prior knowledge in information seeking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)
+  - 信息搜寻中的预备知识
   - [6.4Entropy detectors in the brain](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Entropy_detectors_in_the_brain)
+  - 大脑中的熵检测器
   - [6.5Speed of information processing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Speed_of_information_processing)
+  - 信息处理速度
   - [6.6Probability vs. knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Probability_vs._knowledge)
+  - 概率与知识
   - [6.7Predictability and surprisal](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Predictability_and_surprisal)
+  - 可预见性和意外
   - [6.8Detecting surprisal](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Detecting_surprisal)
+  - 检测意外
   - [6.9The wow factor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_wow_factor)
+  - 「哇」因子
   - 6.10Knowledge valuation network
+  - 知识评估网络
     - [6.10.1Knowledge valuations](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuations)
+    - 知识评估
     - [6.10.2The emotional brain and the rational brain](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_emotional_brain_and_the_rational_brain)
+    - 感性脑和理性脑
     - [6.10.3Decision tree in fast thinking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Decision_tree_in_fast_thinking)
+    - 快速思考中的决策树
     - [6.10.4Valuation network in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Valuation_network_in_education)
+    - 教育中的评估网络
     - [6.10.5Knowledge valuation that affects the course of life](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuation_that_affects_the_course_of_life)
+    - 影响生命过程的知识评估
   - [6.11Learntropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)
+  - 学习熵
   - [6.12Signal timing vs. learntropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Signal_timing_vs._learntropy)
+  - 信息时机与学习熵
   - [6.13Learntropy and learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy_and_learn_drive)
+  - 学习熵和学习内驱力
   - [6.14Optimum information delivery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_information_delivery)
+  - 最佳信息传授
   - [6.15Gripping lectures](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Gripping_lectures)
+  - 令人全神贯注的讲课
   - 6.16Learning rewards
+  - 学习奖励
     - [6.16.1Learn drive reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_reward)
+    - 学习内驱力奖励
     - [6.16.2Evolution of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Evolution_of_the_learn_drive)
+    - 学习内驱力的进化
     - [6.16.3Procedural learning reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Procedural_learning_reward)
+    - 程序性学习奖励
     - [6.16.4Declarative learning reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Declarative_learning_reward)
+    - 陈述性学习奖励
     - [6.16.5Reward centers in learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reward_centers_in_learning)
+    - 学习中的奖励中枢
   - 6.17Biederman model
     - [6.17.1Pleasure of reading about the pleasure of reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_reading_about_the_pleasure_of_reading)
     - [6.17.2Opioid vs. dopamine pleasure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Opioid_vs._dopamine_pleasure)
@@ -96,7 +163,7 @@
     - [6.23.7Is global optimization possible?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Is_global_optimization_possible.3F)
   - [6.24Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning_2)
   - [6.25Summary: Pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Pleasure_of_learning)
-- 7Learn drive vs. learned helplessness
+- 7Learn drive vs. learned helplessness学习内驱力与习得性无助
   - [7.1Loss of learn drive with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Loss_of_learn_drive_with_age)
   - [7.2Neural withering](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_withering)
   - [7.3Learned helplessness at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_school)
@@ -104,7 +171,7 @@
   - [7.5Learned helplessness at daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_daycare)
   - [7.6Your brain is great!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Your_brain_is_great.21)
   - [7.7Summary: School and learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_School_and_learn_drive)
-- 8Education counteracts evolution
+- 8Education counteracts evolution教育抵消进化
   - [8.1Inefficiency of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inefficiency_of_education)
   - [8.2Exploration algorithm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exploration_algorithm)
   - [8.3Evolving imitation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Evolving_imitation)
@@ -120,7 +187,7 @@
   - [8.13Two key errors of education systems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Two_key_errors_of_education_systems)
   - [8.14Overoptimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Overoptimization)
   - [8.15The Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Grand_Education_Reform)
-- 9Toxic memory
+- 9Toxic memory有毒的记忆
   - [9.1Hate of school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hate_of_school)
   - [9.2What are toxic memories?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#What_are_toxic_memories.3F)
   - [9.3Toxic memory: mechanism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memory:_mechanism)
@@ -144,12 +211,12 @@
     - [9.9.4Toxic memories in language learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_language_learning)
     - [9.9.5Toxic memories in Advanced English](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_Advanced_English)
     - [9.9.6Toxic memories in incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_incremental_reading)
-- 10Why schools fail?
+- 10Why schools fail?为什么学校会失败？
   - [10.1Summary of failure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary_of_failure)
   - [10.2Path from knowledge to discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Path_from_knowledge_to_discovery)
   - [10.3Schools abandon exploration](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_abandon_exploration)
   - [10.4Schools hinder discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_hinder_discovery)
-- 11Optimum push zone
+- 11Optimum push zone最佳推动区
   - [11.1Push zone at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_at_school)
   - [11.2Zone of proximal development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Zone_of_proximal_development)
   - [11.3Push zone and coercion](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_and_coercion)
@@ -164,7 +231,7 @@
   - [11.12Push zone: examples](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone:_examples)
   - [11.13Minimum pressure, maximum outcome](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Minimum_pressure.2C_maximum_outcome)
   - [11.14My own story](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_story)
-- 12Natural creativity cycle
+- 12Natural creativity cycle自然创造力周期
   - [12.1Creativity formula](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Creativity_formula)
   - 12.2Natural creativity cycle
     - 12.2.1Day
@@ -190,13 +257,13 @@
     - [12.9.2Incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Incremental_reading)
     - [12.9.3SleepChart](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#SleepChart)
   - [12.10Summary: Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Natural_creativity_cycle)
-- 13Brain evolution
+- 13Brain evolution脑进化
   - [13.1Employing evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_evolution)
   - [13.2Genius of neural computation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Genius_of_neural_computation)
   - [13.3Breeding perfect students](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Breeding_perfect_students)
   - [13.4Eugenics](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Eugenics)
   - [13.5Summary: Brain evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Brain_evolution)
-- 14Baby management
+- 14Baby management婴儿管理
   - [14.1Rich learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Rich_learning)
   - [14.2Micromanaging baby development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Micromanaging_baby_development)
   - [14.3Caging toddlers](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Caging_toddlers)
@@ -204,7 +271,7 @@
   - [14.5Preschool drills](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Preschool_drills)
   - [14.6Exposure is good](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exposure_is_good)
   - [14.7Summary: Baby management](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Baby_management)
-- 15How baby brain does not work
+- 15How baby brain does not work婴儿的大脑怎样不起作用
   - [15.1Accelerating development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Accelerating_development)
   - [15.2Perfect forgetting machines](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_forgetting_machines)
   - [15.3Infantile amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Infantile_amnesia)
@@ -214,7 +281,7 @@
   - [15.7Precocity paradox](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Precocity_paradox)
   - [15.8Nigeria rules the world!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Nigeria_rules_the_world.21)
   - [15.9Summary: baby brain problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_baby_brain_problems)
-- 16Childhood amnesia
+- 16Childhood amnesia童年失忆症
   - [16.1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction_2)
   - 16.2Measuring amnesia
     - [16.2.1Methodology problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Methodology_problems)
@@ -233,7 +300,7 @@
   - [16.9My first memories](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_first_memories)
   - [16.10Conclusions for parents](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Conclusions_for_parents)
   - [16.11Summary: Childhood amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_amnesia)
-- 17Daycare misery
+- 17Daycare misery幼儿园的苦难
   - [17.1Benefits of daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Benefits_of_daycare)
   - [17.2Social pressure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Social_pressure)
   - 17.3Problem of daycare
@@ -256,7 +323,7 @@
   - [18.7Optimum stress exposure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_stress_exposure)
   - [18.8Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_2)
   - [18.9Summary: Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Stress_resilience)
-- 19Childhood passions
+- 19Childhood passions童年激情
   - [19.1Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions_2)
   - [19.2School notebooks](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_notebooks)
   - [19.3Notes in pictures](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Notes_in_pictures)
@@ -264,7 +331,7 @@
   - [19.5Remembering for half-a-century](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Remembering_for_half-a-century)
   - [19.6Schooling can easily kill passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schooling_can_easily_kill_passions)
   - [19.7Summary: Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_passions)
-- 20Why kids hate school?
+- 20Why kids hate school?为什么孩子讨厌上学？
   - [20.1Experts confirm: kids don't like school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Experts_confirm:_kids_don.27t_like_school)
   - [20.2My own investigation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_investigation)
   - [20.3Top 11: What kids hate most about school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Top_11:_What_kids_hate_most_about_school)
@@ -273,6 +340,7 @@
     - [20.4.2Arian](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Arian)
   - [20.5Summary: Why kids hate school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Why_kids_hate_school)
 - 21Mountain climb metaphor
+- 爬山类比
   - [21.1Education is a mountain to climb](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Education_is_a_mountain_to_climb)
   - [21.2Hindsight is not 20/20](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hindsight_is_not_20.2F20)
   - 21.3Mountain climb example
@@ -280,6 +348,10 @@
     - [21.3.2Replicating passions at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Replicating_passions_at_school)
   - [21.4Parody of the future](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Parody_of_the_future)
 - [22Glossary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Glossary)
+- [术语表](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/22.Glossary%E6%9C%AF%E8%AF%AD%E8%A1%A8.md)
 - [23References](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#References)
+- 参考文献
 - [24Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading_2)
+- [拓展阅读](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/24.Further%20reading%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB.md)
 - [25Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary)
+- [摘要](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/25.Summary%E6%91%98%E8%A6%81.md)
