Content章节目录翻译完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -133,37 +133,69 @@
     - [6.16.5Reward centers in learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reward_centers_in_learning)
     - 学习中的奖励中枢
   - 6.17Biederman model
+  - Biederman 模型
     - [6.17.1Pleasure of reading about the pleasure of reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_reading_about_the_pleasure_of_reading)
+    - 阅读关于阅读愉悦的愉悦
     - [6.17.2Opioid vs. dopamine pleasure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Opioid_vs._dopamine_pleasure)
+    - 阿片类药物与多巴胺的愉悦
     - [6.17.3Pleasure of association](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_association)
+    - 联想的愉悦
     - [6.17.4Impact of memory on the pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Impact_of_memory_on_the_pleasure_of_learning)
+    - 记忆对学习愉悦的影响
     - [6.17.5Stages of learn drive evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stages_of_learn_drive_evolution)
+    - 学习内驱力进化的几个阶段
   - [6.18Desirable difficulty](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty)
+  - 值得的难度
   - 6.19Addiction to learning
+  - 学习成瘾
     - [6.19.1Inborn addiction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inborn_addiction)
+    - 天生成瘾
     - [6.19.2Learning and gambling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_gambling)
+    - 学习和赌博
     - [6.19.3Learning and sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_sleep)
+    - 学习和睡眠
     - [6.19.4Learning and exercise](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_exercise)
+    - 学习和锻炼
     - [6.19.5Learning restraint](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_restraint)
+    - 学习限制
   - [6.20Displeasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Displeasure_of_learning)
+  - 学习的不快
   - [6.21Learning and procrastination](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_procrastination)
+  - 学习和拖延
   - 6.22Learning and depression
+  - 学习和抑郁
     - [6.22.1Learning at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_at_school)
+    - 在校学习
     - [6.22.2Impact of memory on mood](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Impact_of_memory_on_mood)
+    - 记忆对情绪的影响
     - [6.22.3Anti-depressants](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Anti-depressants)
+    - 抗抑郁药
     - [6.22.4Learn drive and optimism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_optimism)
+    - 学习内驱力和乐观
     - [6.22.5Can learning help you?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Can_learning_help_you.3F)
+    - 学习可以帮到你吗？
   - 6.23Optimization of education: Global or Local?
+  - 教育的优化：全局还是局部？
     - [6.23.1Perfect model of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_model_of_education)
+    - 完美的教育模型
     - [6.23.2Optimization based on the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimization_based_on_the_learn_drive)
+    - 基于学习内驱力的优化
     - [6.23.3Designing a child's mind](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Designing_a_child.27s_mind)
+    - 设计一个孩子的思想
     - [6.23.4Reliance on emergence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reliance_on_emergence)
+    - 依赖于突现
     - [6.23.5The tree metaphor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_tree_metaphor)
+    - 树类比
     - [6.23.6Local optimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Local_optimization)
+    - 局部优化
     - [6.23.7Is global optimization possible?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Is_global_optimization_possible.3F)
+    - 全局优化可能吗？
   - [6.24Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning_2)
+  - 学习的基本规律
   - [6.25Summary: Pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Pleasure_of_learning)
-- 7Learn drive vs. learned helplessness学习内驱力与习得性无助
+  - 摘要：学习的愉悦
+- 7Learn drive vs. learned helplessness
+- 学习内驱力与习得性无助
   - [7.1Loss of learn drive with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Loss_of_learn_drive_with_age)
   - [7.2Neural withering](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_withering)
   - [7.3Learned helplessness at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_school)
@@ -171,7 +203,8 @@
   - [7.5Learned helplessness at daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_daycare)
   - [7.6Your brain is great!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Your_brain_is_great.21)
   - [7.7Summary: School and learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_School_and_learn_drive)
-- 8Education counteracts evolution教育抵消进化
+- 8Education counteracts evolution
+- 教育抵消进化
   - [8.1Inefficiency of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inefficiency_of_education)
   - [8.2Exploration algorithm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exploration_algorithm)
   - [8.3Evolving imitation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Evolving_imitation)
@@ -187,7 +220,8 @@
   - [8.13Two key errors of education systems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Two_key_errors_of_education_systems)
   - [8.14Overoptimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Overoptimization)
   - [8.15The Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Grand_Education_Reform)
-- 9Toxic memory有毒的记忆
+- 9Toxic memory
+- 有毒的记忆
   - [9.1Hate of school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hate_of_school)
   - [9.2What are toxic memories?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#What_are_toxic_memories.3F)
   - [9.3Toxic memory: mechanism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memory:_mechanism)
@@ -211,12 +245,14 @@
     - [9.9.4Toxic memories in language learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_language_learning)
     - [9.9.5Toxic memories in Advanced English](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_Advanced_English)
     - [9.9.6Toxic memories in incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_incremental_reading)
-- 10Why schools fail?为什么学校会失败？
+- 10Why schools fail?
+- 为什么学校会失败？
   - [10.1Summary of failure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary_of_failure)
   - [10.2Path from knowledge to discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Path_from_knowledge_to_discovery)
   - [10.3Schools abandon exploration](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_abandon_exploration)
   - [10.4Schools hinder discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_hinder_discovery)
-- 11Optimum push zone最佳推动区
+- 11Optimum push zone
+- 最佳推动区
   - [11.1Push zone at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_at_school)
   - [11.2Zone of proximal development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Zone_of_proximal_development)
   - [11.3Push zone and coercion](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_and_coercion)
@@ -231,7 +267,8 @@
   - [11.12Push zone: examples](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone:_examples)
   - [11.13Minimum pressure, maximum outcome](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Minimum_pressure.2C_maximum_outcome)
   - [11.14My own story](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_story)
-- 12Natural creativity cycle自然创造力周期
+- 12Natural creativity cycle
+- 自然创造力周期
   - [12.1Creativity formula](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Creativity_formula)
   - 12.2Natural creativity cycle
     - 12.2.1Day
@@ -257,13 +294,15 @@
     - [12.9.2Incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Incremental_reading)
     - [12.9.3SleepChart](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#SleepChart)
   - [12.10Summary: Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Natural_creativity_cycle)
-- 13Brain evolution脑进化
+- 13Brain evolution
+- 脑进化
   - [13.1Employing evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_evolution)
   - [13.2Genius of neural computation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Genius_of_neural_computation)
   - [13.3Breeding perfect students](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Breeding_perfect_students)
   - [13.4Eugenics](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Eugenics)
   - [13.5Summary: Brain evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Brain_evolution)
-- 14Baby management婴儿管理
+- 14Baby management
+- 婴儿管理
   - [14.1Rich learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Rich_learning)
   - [14.2Micromanaging baby development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Micromanaging_baby_development)
   - [14.3Caging toddlers](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Caging_toddlers)
@@ -271,7 +310,8 @@
   - [14.5Preschool drills](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Preschool_drills)
   - [14.6Exposure is good](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exposure_is_good)
   - [14.7Summary: Baby management](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Baby_management)
-- 15How baby brain does not work婴儿的大脑怎样不起作用
+- 15How baby brain does not work
+- 婴儿的大脑怎样不起作用
   - [15.1Accelerating development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Accelerating_development)
   - [15.2Perfect forgetting machines](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_forgetting_machines)
   - [15.3Infantile amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Infantile_amnesia)
@@ -281,7 +321,8 @@
   - [15.7Precocity paradox](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Precocity_paradox)
   - [15.8Nigeria rules the world!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Nigeria_rules_the_world.21)
   - [15.9Summary: baby brain problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_baby_brain_problems)
-- 16Childhood amnesia童年失忆症
+- 16Childhood amnesia
+- 童年失忆症
   - [16.1Introduction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Introduction_2)
   - 16.2Measuring amnesia
     - [16.2.1Methodology problems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Methodology_problems)
@@ -300,7 +341,8 @@
   - [16.9My first memories](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_first_memories)
   - [16.10Conclusions for parents](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Conclusions_for_parents)
   - [16.11Summary: Childhood amnesia](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_amnesia)
-- 17Daycare misery幼儿园的苦难
+- 17Daycare misery
+- 幼儿园的苦难
   - [17.1Benefits of daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Benefits_of_daycare)
   - [17.2Social pressure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Social_pressure)
   - 17.3Problem of daycare
@@ -323,7 +365,8 @@
   - [18.7Optimum stress exposure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_stress_exposure)
   - [18.8Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_2)
   - [18.9Summary: Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Stress_resilience)
-- 19Childhood passions童年激情
+- 19Childhood passions
+- 童年激情
   - [19.1Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions_2)
   - [19.2School notebooks](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_notebooks)
   - [19.3Notes in pictures](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Notes_in_pictures)
@@ -331,7 +374,8 @@
   - [19.5Remembering for half-a-century](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Remembering_for_half-a-century)
   - [19.6Schooling can easily kill passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schooling_can_easily_kill_passions)
   - [19.7Summary: Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Childhood_passions)
-- 20Why kids hate school?为什么孩子讨厌上学？
+- 20Why kids hate school?
+- 为什么孩子讨厌上学？
   - [20.1Experts confirm: kids don't like school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Experts_confirm:_kids_don.27t_like_school)
   - [20.2My own investigation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_investigation)
   - [20.3Top 11: What kids hate most about school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Top_11:_What_kids_hate_most_about_school)
