Content 翻译至 Toxic memeory

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -197,29 +197,51 @@
 - 7Learn drive vs. learned helplessness
 - 学习内驱力与习得性无助
   - [7.1Loss of learn drive with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Loss_of_learn_drive_with_age)
+  - 学习内驱力随年龄增长而丧失
   - [7.2Neural withering](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_withering)
+  - 神经萎缩
   - [7.3Learned helplessness at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_school)
+  - 学校中的习得性无助
   - [7.4Kids in a container](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_in_a_container)
+  - 容器里的孩子
   - [7.5Learned helplessness at daycare](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learned_helplessness_at_daycare)
+  - 幼儿园中的习得性无助
   - [7.6Your brain is great!](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Your_brain_is_great.21)
+  - 你的大脑很棒！
   - [7.7Summary: School and learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_School_and_learn_drive)
+  - 摘要：学校和学习内驱力
 - 8Education counteracts evolution
 - 教育抵消进化
   - [8.1Inefficiency of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inefficiency_of_education)
+  - 教育的低效
   - [8.2Exploration algorithm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Exploration_algorithm)
+  - 探索算法
   - [8.3Evolving imitation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Evolving_imitation)
+  - 不断进化的模仿
   - [8.4Imitation vs. novelty seeking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Imitation_vs._novelty_seeking)
+  - 模仿与猎奇
   - [8.5Language, religions, and war](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Language.2C_religions.2C_and_war)
+  - 语言，宗教和战争
   - [8.6The advent of mass education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_advent_of_mass_education)
+  - 大众教育的出现
   - [8.7Coercive immitation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Coercive_immitation)
+  - 强制的模仿
   - [8.8Resistance to social pressure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Resistance_to_social_pressure)
+  - 抵抗社会压力
   - [8.9Resistance to extrinsic valuation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Resistance_to_extrinsic_valuation)
+  - 抵抗外部评估
   - [8.10Variations of resistance in a population](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Variations_of_resistance_in_a_population)
+  - 人口中的抵抗变化
   - [8.11Wieman drafts the future of exploratory learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Wieman_drafts_the_future_of_exploratory_learning)
+  - Wieman 起草了探索性学习的未来
   - [8.12Incremental reading is based on exploration](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Incremental_reading_is_based_on_exploration)
+  - 渐进阅读基于探索
   - [8.13Two key errors of education systems](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Two_key_errors_of_education_systems)
+  - 教育系统中的两个关键错误
   - [8.14Overoptimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Overoptimization)
+  - 过度优化
   - [8.15The Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Grand_Education_Reform)
+  - 宏大的教育改革
 - 9Toxic memory
 - 有毒的记忆
   - [9.1Hate of school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hate_of_school)
