--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -243,52 +243,93 @@
   - [8.15The Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Grand_Education_Reform)
   - 宏大的教育改革
 - 9Toxic memory
-- 有毒的记忆
+- 毒性记忆
   - [9.1Hate of school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hate_of_school)
+  - 讨厌学校
   - [9.2What are toxic memories?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#What_are_toxic_memories.3F)
+  - 什么是毒性记忆
   - [9.3Toxic memory: mechanism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memory:_mechanism)
+  - 毒性记忆：机制
   - [9.4School: an unhappy institution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School:_an_unhappy_institution)
+  - 学校：一个令人不快的机构
   - [9.5Early learning programs](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Early_learning_programs)
+  - 早期学习计划
   - [9.6Mathematics](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Mathematics)
+  - 数学
   - [9.7Alzheimer's disease](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Alzheimer.27s_disease)
+  - 老年痴呆症
   - 9.8Examples
+  - 例子
     - [9.8.1Fear of fractions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fear_of_fractions)
+    - 恐惧分式
     - [9.8.2Fear of reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fear_of_reading)
+    - 恐惧阅读
     - [9.8.3Multiplication table](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Multiplication_table)
+    - 乘法表
     - [9.8.4Sequence of months](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Sequence_of_months)
+    - 月份顺序
     - [9.8.5Delaying math instruction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Delaying_math_instruction)
+    - 推迟数学教学
     - [9.8.6Fear with no purpose](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fear_with_no_purpose)
+    - 恐惧无目的
     - [9.8.7Meaningless history](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Meaningless_history)
+    - 毫无意义的历史
     - [9.8.8Trouble with counting](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Trouble_with_counting)
+    - 计算困难
   - 9.9Toxic memories in SuperMemo
+  - Supermemo 中的毒性记忆
     - [9.9.1SuperMemo leeches](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#SuperMemo_leeches)
+    - Supermemo 水蛭
     - [9.9.2Inefficiency of SuperMemo](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inefficiency_of_SuperMemo)
+    - Supermemo 的低效
     - [9.9.3Toxic SuperMemo](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_SuperMemo)
+    - 有毒的 Supermemo
     - [9.9.4Toxic memories in language learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_language_learning)
+    - 语言学习中的毒性记忆
     - [9.9.5Toxic memories in Advanced English](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_Advanced_English)
+    - 高级英语中的毒性记忆
     - [9.9.6Toxic memories in incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memories_in_incremental_reading)
+    - 渐进阅读中的毒性记忆
 - 10Why schools fail?
 - 为什么学校会失败？
   - [10.1Summary of failure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary_of_failure)
+  - 失败摘要
   - [10.2Path from knowledge to discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Path_from_knowledge_to_discovery)
+  - 从知识到发现的路径
   - [10.3Schools abandon exploration](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_abandon_exploration)
+  - 学校放弃探索
   - [10.4Schools hinder discovery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Schools_hinder_discovery)
+  - 学校阻碍发现
 - 11Optimum push zone
 - 最佳推动区
   - [11.1Push zone at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_at_school)
+  - 学校中的推动区
   - [11.2Zone of proximal development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Zone_of_proximal_development)
+  - 近端发展区
   - [11.3Push zone and coercion](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone_and_coercion)
+  - 推动区和强制
   - [11.4Comfort zone](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Comfort_zone)
+  - 舒适区
   - [11.5Regress zone](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Regress_zone)
+  - 退步区
   - [11.6The optimum push](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_optimum_push)
+  - 最佳推动力
   - [11.7Zone changes](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Zone_changes)
+  - 区域变化
   - [11.8Correcting development trajectory](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Correcting_development_trajectory)
+  - 校正发展轨迹
   - [11.9Changes to push zone with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Changes_to_push_zone_with_age)
+  - 不同年龄下的推动区变化
   - [11.10Complexities of influence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Complexities_of_influence)
+  - 影响因素的复杂性
   - [11.11Predictability of a push](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Predictability_of_a_push)
+  - 推动的可预测性
   - [11.12Push zone: examples](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Push_zone:_examples)
+  - 推动区：例子
   - [11.13Minimum pressure, maximum outcome](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Minimum_pressure.2C_maximum_outcome)
+  - 最小化的压力，最大化的成果
   - [11.14My own story](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#My_own_story)
+  - 我自己的故事
 - 12Natural creativity cycle
 - 自然创造力周期
   - [12.1Creativity formula](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Creativity_formula)
