--- a/I would never send my kids to school我再也不会把孩子送去学校/22.Glossary术语表.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/22.Glossary术语表.md
@@ -129,7 +129,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 - [Stabilization decay](https://supermemo.guru/wiki/Stabilization_decay) - gradual decrease in the potential for [stability increase](https://supermemo.guru/wiki/Stability_increase) in memories with high [stability](https://supermemo.guru/wiki/Stability)
 - [稳定衰退](https://supermemo.guru/wiki/Stabilization_decay)——在[稳定性](https://supermemo.guru/wiki/Stability)较高的记忆中，其[稳定性增加](https://supermemo.guru/wiki/Stability_increase)的可能性逐渐降低
 - [Toxic memory](https://supermemo.guru/wiki/Toxic_memory) - persistent memory that leads to anxiety
-- [有毒记忆](https://supermemo.guru/wiki/Toxic_memory)——导致焦虑的顽固记忆
+- [毒性记忆](https://supermemo.guru/wiki/Toxic_memory)——导致焦虑的顽固记忆
 - [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) - model of memory based on [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) of memories
 - [长期记忆的双组件模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)——基于记忆[可提取性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)的记忆模型
 - [Two-process model of sleep regulation](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation) - model that explains why and when we fall asleep
