--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -487,7 +487,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - despite all calls for reforms, mainstream schooling in the western world still keeps evolving in the wrong direction: more haste, more stress, greater loads, less coherence, and more neural injury
 - 尽管各方都在呼吁改革，但西方世界的主流学校教育仍在朝着错误的方向发展：更加匆忙、压力更大、负担更重、连贯性更低、神经损伤更严重
 - main factors of schooling that lead to excitotoxic injury are: overload, low coherence, high interference, low retention, low [stability](https://supermemo.guru/wiki/Stability), sleep deprivation, [circadian violations](https://supermemo.guru/wiki/Natural_creativity_cycle), [stress](https://supermemo.guru/wiki/Stress_resilience), and [toxic memories](https://supermemo.guru/wiki/Toxic_memory)
-- 导致兴奋性毒性损伤的学校教育的主要因素是：超负荷、低连贯性、高干扰、低记忆保留、低稳定性、睡眠剥夺、昼夜节律失调、压力和有毒记忆
+- 导致兴奋性毒性损伤的学校教育的主要因素是：超负荷、低连贯性、高干扰、低记忆保留、低稳定性、睡眠剥夺、昼夜节律失调、压力和毒性记忆
 - even though literacy is preventive, bad learning and bad habits taken from school may contribute to Alzheimer's pathology later in life
 - 尽管识字是一种预防措施，但不良学习和从学校学到的不良习惯可能会导致晚年老年痴呆症的病理变化
 
