--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -333,40 +333,71 @@
 - 12Natural creativity cycle
 - 自然创造力周期
   - [12.1Creativity formula](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Creativity_formula)
+  - 创造力公式
   - 12.2Natural creativity cycle
+  - 自然创造力周期
     - 12.2.1Day
+    - 白天
       - [12.2.1.1Waking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Waking)
+      - 醒来
       - [12.2.1.2Morning creativity](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Morning_creativity)
+      - 晨间创造力
       - [12.2.1.3Focus and creativity cycles](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Focus_and_creativity_cycles)
+      - 注意力和创造力循环
       - [12.2.1.4Siesta bonus](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Siesta_bonus)
+      - 午睡奖励
     - 12.2.2Sleep
+    - 睡眠
       - [12.2.2.1NREM sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#NREM_sleep)
+      - NREM 睡眠
       - [12.2.2.2REM sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#REM_sleep)
+      - REM 睡眠
       - [12.2.2.3Nighttime inventions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Nighttime_inventions)
+      - 夜间发明
   - 12.3Neural aspects of the creativity cycle
+  - 创造力周期的神经方面
     - [12.3.1Waking Day](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Waking_Day)
+    - 醒来后白天
     - [12.3.2Night](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Night)
+    - 晚上
     - [12.3.3Next morning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Next_morning)
+    - 第二天早上
   - [12.4Depression and positive thinking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Depression_and_positive_thinking)
+  - 抑郁和积极思考
   - [12.5Creative cycle control](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Creative_cycle_control)
+  - 创造力周期控制
   - [12.6Impact of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Impact_of_schooling)
+  - 学校教育的影响
   - [12.7Employing the creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_the_creativity_cycle)
+  - 利用创造力周期
   - [12.8Old school: creativity cycles](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Old_school:_creativity_cycles)
+  - 老一套：创造力周期
   - 12.9Tools
+  - 工具
     - [12.9.1Learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning)
+    - 学习
     - [12.9.2Incremental reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Incremental_reading)
+    - 渐进阅读
     - [12.9.3SleepChart](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#SleepChart)
+    - 睡眠图表
   - [12.10Summary: Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Natural_creativity_cycle)
+  - 摘要：自然创造力周期
 - 13Brain evolution
 - 脑进化
   - [13.1Employing evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_evolution)
+  - 利用进化
   - [13.2Genius of neural computation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Genius_of_neural_computation)
+  - 神经计算的天才
   - [13.3Breeding perfect students](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Breeding_perfect_students)
+  - 培育完美学生
   - [13.4Eugenics](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Eugenics)
+  - 优生学
   - [13.5Summary: Brain evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Brain_evolution)
+  - 摘要：脑进化
 - 14Baby management
 - 婴儿管理
   - [14.1Rich learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Rich_learning)
+  - 丰富学习
   - [14.2Micromanaging baby development](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Micromanaging_baby_development)
   - [14.3Caging toddlers](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Caging_toddlers)
   - [14.4Parental crime #1](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Parental_crime_.231)
